# ferris-ui

./: .gitignore  Cargo.toml  Makefile  index.html  openDebug.scpt  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yaml
.github/workflows/: ci.yml  docs.yaml
.vim-lsp-settings/: settings.json
RustUITests-Runner.app/: .gitignore  Info.plist
RustUITests-Runner.app/PlugIns/DinghyUITests.xctest/: .gitignore  Info.plist
RustWrapper.app/: Info.plist
examples/: simple.rs
src/: app.rs  image.rs  lib.rs  screenshot.rs  switch.rs  test.rs  text.rs  text_field.rs  text_view.rs  vstack.rs
swift-example/: .gitignore  Makefile  Package.swift
swift-example/Sources/: main.swift
ui_tests/: .gitattributes  .gitignore  Cargo.toml  build.rs  ui_tests.rs  ui_tests.xctestconfiguration.base
ui_tests/src/: main.rs
