[workspace]
members = [
    "ui_tests",
]
resolver = "2"

[package]
name = "ferris-ui"
version = "0.1.0"
edition = "2024"
[features]
nightly = []
nightly-debug = []
default = ["nightly"]

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6.1"
winit = { version = "0.30", features = ["rwh_06" ] }
objc2-core-foundation = "0.3.0"
log = "0.4"

[target.'cfg(target_os = "ios")'.dev-dependencies]
oslog = "0.2"
env_logger = "0.11"


[target.'cfg(target_os = "ios")'.dependencies.objc2-ui-kit]
version = "0.3.0"
features = [
#"all",
    "UIApplication",
    "UIDevice",
    "UIEvent",
    "UIGeometry",
    "UIGestureRecognizer",
    "UIOrientation",
    "UIPanGestureRecognizer",
    "UIPinchGestureRecognizer",
    "UIResponder",
    "UIRotationGestureRecognizer",
    "UIScreen",
    "UIScreenMode",
    "UITapGestureRecognizer",
    "UITouch",
    "UITraitCollection",
    "UIView",
    "UIViewController",
    "UIWindow",
    "UITextView",
    "UIScrollView",
    "UISwitch",

    "UIControl",
    "UILabel",

    "UIColor",
    "UIStackView",
    "UITabBar",
    "UIToolbar",
    "UIBarButtonItem",
    "UIBarItem",
]
[target.'cfg(target_os = "ios")'.dependencies.objc2-foundation]
version = "0.3.0"
features = [
#"dispatch",
    "NSArray",
    "NSEnumerator",
    "NSGeometry",
    "NSObjCRuntime",
    "NSString",
    "NSProcessInfo",
    "NSThread",
    "NSSet",
]
[target.'cfg(target_os = "ios")'.dependencies.objc2-quartz-core]
version = "0.3.0"

[patch.crates-io]

#objc2-xc-test          = { path = "../objc2/framework-crates/objc2-xc-test" }
#objc2-xc-ui-automation = { path = "../objc2/framework-crates/objc2-xc-ui-automation" }
#objc2                  = { path = "../objc2/crates/objc2/"}
#objc2-core-foundation  = { path = "../objc2/framework-crates/objc2-core-foundation" }
#objc2-ui-kit           = { path = "../objc2/framework-crates/objc2-ui-kit" }
#objc2-foundation       = { path = "../objc2/framework-crates/objc2-foundation" }
#objc2-quartz-core      = { path = "../objc2/framework-crates/objc2-quartz-core" }

objc2-xc-test          = { git = "https://github.com/madsmtm/objc2/" }
objc2-xc-ui-automation = { git = "https://github.com/madsmtm/objc2/" }
objc2                  = { git = "https://github.com/madsmtm/objc2/" }
objc2-core-foundation  = { git = "https://github.com/madsmtm/objc2/" }
objc2-ui-kit           = { git = "https://github.com/madsmtm/objc2/" }
objc2-foundation       = { git = "https://github.com/madsmtm/objc2/" }
objc2-quartz-core      = { git = "https://github.com/madsmtm/objc2/" }
