[package]
name = "ui_tests"
edition = "2024"

[dependencies]
env_logger = "0.11"
ferris-ui = { path = "../" }
objc2-xc-test = { version = "0.3.1", default-features = false }
objc2-xc-ui-automation = { version = "0.3.1", default-features = false }
objc2-foundation = "0.3.1"
ctor = { version = "0.5", default-features = false, features = ["proc_macro"] }
